--- a/EXERCICES/maquette archi/maquette.css
+++ b/EXERCICES/maquette archi/maquette.css
@@ -1,3 +1,4 @@
+
 css 
 /* --- Reset / Normalize de base --- */
 
@@ -16,7 +17,7 @@ ul, ol, li, fieldset, legend {
 }
 
 /* Listes sans décoration par défaut */
-ul, ol {
+ul, ol,li {
   list-style: none;
 }
 
@@ -48,6 +49,8 @@ p, h1, h2, h3, h4, h5, h6 {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  font-family: 'roboto', sans-serif;
+
 }
 
 /* Décoration de texte par défaut plus propre */
@@ -55,7 +58,11 @@ html {
   -webkit-text-size-adjust: 100%; /* éviter redimensionnement texte sur iOS/Safari */
   -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
+
 }
+
+
+
 
 
 .navbar {
@@ -63,24 +70,177 @@ html {
     /* flex-direction: row;/ */
 }
 
+header {
+    position: relative;
+}
+
 .navbar p {
     width: 20%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
+    margin: 5px auto auto 10px;
 }
 
 .navbar nav {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     width: 80%;
+    height: 35px;
     justify-content: end;
     gap: 2rem;
 }
 
+.navbar nav li {
+    margin: auto 15px auto 10px;
+    padding-top: 1px;
+    
+}
+
+.img1 img {
+
+/* border: 1px solid grey; */
+width: 100%;
+height: 410px;
+/* padding-left: 20px  ; */
+/* padding-right: 20px  ; */
+}
+
+.img1 p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+
+}
 
 
+.projects .container  {
+
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly ;
+}
+
+.projects h1 {
+    font-size: 1.2em;
+    margin-left: 10px;
+    margin-bottom: 30px;
+}
+
+.projects .container .house {
+width: 24%;
+position: relative;
+margin-bottom: 10px;
+} 
+
+.projects .container .house span {
+
+color: white;
+position: absolute;
+display: inline-block;
+width: 50%;
+background-color: black;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: 9px;
+text-align: center;
 
 
+}
 
+.about  .titre  {
+
+   font-size: 1.2em;
+   margin-top: 20px;
+    margin-left: 10px;
+}
+
+.about .paragraphe { 
+
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.about .container {
+
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.about .card {
+    width: 24%;
+}
+
+.about .container .card .job {
+    color: grey;
+    font-size: smaller;
+}
+
+
+.about .container .card .name {
+    margin-top: 6px;
+}
+
+.about .container a {
+
+    background-color: gainsboro;
+    display: block;
+    text-align: center;
+   margin-top: 10px;
+ 
+}
+
+.contact .titre {
+
+    font-size: 1.2em;
+     margin-left: 10px;
+   margin-top: 20px;
+
+}
+
+.contact form input {
+    display: block;
+    
+   width: 98%;
+    gap: 7px;
+    margin: 10px;
+}
+
+.contact .button {
+    display: inline-block;
+;
+    background-color: black;
+    color: white;
+    width: 20%;
+    padding: 0 2px 0 2px;
+    margin-bottom: 30px;
+    
+}
+
+.contact .paragraphe {
+
+     margin-left: 10px;
+    
+}
+
+.contact img {
+
+    display: block;
+    width: 97.5%;
+    margin: auto;
+    position: relative;
+    
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+    background-color: black;
+    color: white;
+    font-size: smaller;
+}
 
 
 
